# ChangeLog for x11-libs/mx
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/mx/ChangeLog,v 1.2 2011/09/15 22:10:39 eva Exp $

*mx-1.3.1 (15 Sep 2011)
*mx-1.2.1 (15 Sep 2011)

  15 Sep 2011; Gilles Dartiguelongue <eva@gentoo.org> +mx-1.2.1.ebuild,
  +mx-1.3.1.ebuild:
  Version bumps.

*mx-1.1.12 (18 Aug 2011)

  18 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +mx-1.1.12.ebuild,
  +metadata.xml:
  Move from gnome overlay for GNOME 3
