@@ -4,15 +4,17 @@ Hash: SHA1
 DIST mx-1.1.12.tar.bz2 1206723 RMD160 0e0832ed3f007e95c7eca7981374ed5c29fe9389 SHA1 f32bb235ff232ec8c254e92fe64a7b4b0adb4fe2 SHA256 6208505e3ef6fb7b770c5044aa9197310c33990647ca84407785758e873a71f4
 DIST mx-1.2.1.tar.bz2 1233711 RMD160 ad2a1b4d3d552f82137b06a18c12424733630a06 SHA1 d4fb27eb76c7d4521613d1261f57975918b0c5df SHA256 51370a475bce658c6448831b973e7160ef25b5012319f77573a4f27eabd1a187
 DIST mx-1.3.1.tar.bz2 1252948 RMD160 4a82e68362228563b141a143fd864ffe5990716f SHA1 f6887155749fa54a25251ba76aee7675eadcd7fa SHA256 1ba018dfd39a44dd0f9d62d95cba9070e8c0b9735ce8531ef7f8a0e4e4a66111
+DIST mx-1.4.2.tar.bz2 1135098 RMD160 619b606392806b741aa1e70236a3e8b951ed5005 SHA1 0b59d4e6c6dd6c7f4f0f49367f61ef90bb32e3f2 SHA256 9d40dd48a8e3d098cc75c05163f77305ffb83439783dc91be50681c9502660ce
 EBUILD mx-1.1.12.ebuild 1405 RMD160 810c778963c76ee7f1374c70d54812338f56c78a SHA1 bc281337b3108bd1c45a1845659d655459565ce7 SHA256 14701c26ef381cdd3c9fc880cc165faad45e4d4c77bd2696ea17ebb5ed2dd947
 EBUILD mx-1.2.1.ebuild 1399 RMD160 d6d0f2ac4b886a43fcbea257d97a46ba31e0550e SHA1 93895e6fc01a5f93286c8749f2b833d624cb9070 SHA256 d67663326888a4a5a6bbee33f4143dcfc0eb10264f32e39569232c990d98f34d
 EBUILD mx-1.3.1.ebuild 1399 RMD160 76dd75ceb07a805c63eeee693490e98a7cb34f26 SHA1 ad5c4c8ab5f9071692c2fa74f872f5b9b0f644d5 SHA256 c1fdb62547815a5618237c1444811e5b7f74f3aca1a90e25fdfdd28812a6bdeb
-MISC ChangeLog 506 RMD160 799de49dd9324b15b1da9827afbcb3bc34f5d5f7 SHA1 63ed53a789e666214df840443fac360d49b6385b SHA256 d7f08a61b7abc5a250aadb6fab4bf5584327a50723d79fd1cd03e438a03a6f36
+EBUILD mx-1.4.2.ebuild 1400 RMD160 3b8ef31b8d4e6d3ddd49c73a52682ed2d4d4c13c SHA1 bf9b2e6b207f88bd266bc83f74673b76958ea13d SHA256 c8d0eae0becabb927b2ac4d40354a251d24d35002cd7d8f5d3ba979cbbfdf2d2
+MISC ChangeLog 650 RMD160 9c6b7ddd341854e86dfcbe2d1667628d475b7927 SHA1 e36013e6c9b110facd6613d88a4c0da9cca37d0c SHA256 d0de187af1e2e2af46d8520eebfc049f8e49ce7b361155c94513f8d627d94026
 MISC metadata.xml 358 RMD160 925c4ca51c6f3b902fd56c7b335b6017dcbd8c06 SHA1 557a48b7ef1fb6c51bc6749d95b5d28b8588e4e5 SHA256 fe090476594a1a9520817dd1308c7ac91b54b2319ec6ee19dfeae3ca4404e7d2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk5yd+QACgkQ1fmVwcYIWAZwpQCfSJHT4vr9ubkn+AjpfORgM+l3
-If0AoNn3EkJoPYxMew9Fs0aI1JHUp7Y+
-=297E
+iEYEARECAAYFAk830CcACgkQ1fmVwcYIWAb89QCfa2eKF8+YZqbEN2Hlrl58oOMJ
+7H8AoICZxRuWnzajbSgBEy4I4hLaIWqE
+=Mm61
 -----END PGP SIGNATURE-----
