@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/mx
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/mx/ChangeLog,v 1.2 2011/09/15 22:10:39 eva Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/mx/ChangeLog,v 1.3 2012/02/12 14:43:45 eva Exp $
+
+*mx-1.4.2 (12 Feb 2012)
+
+  12 Feb 2012; Gilles Dartiguelongue <eva@gentoo.org> +mx-1.4.2.ebuild:
+  Version bump, bug #403097, thanks to David.
 
 *mx-1.3.1 (15 Sep 2011)
 *mx-1.2.1 (15 Sep 2011)
